@@ -111,6 +111,10 @@ o - New program rd-remote with the same interface as qmail-remote for
 65. slowq-send.c, qmail-send.c, qmta-send.c: removed multiple calls to
     getpid()
 66. qmta-send.c: write pid to queue/lock/pid for identity
+- 20/12/2023
+68. spawn.c: added -4 error code for unable to fork
+69. qmail-lspawn.c: refactored code for setting PWSTRUCT environment variable
+70. sendmail.c: added -r option to set mailx return path
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
